--- a/Tableau Customer/static/css/style.css
+++ b/Tableau Customer/static/css/style.css
@@ -16,3 +16,10 @@ img {
     max-width: 100%;
     height: auto;
 }
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+  }
