--- a/templates/index.html
+++ b/templates/index.html
@@ -199,7 +199,7 @@
             <p style="color: rgb(50, 50, 59); font-size:25px ; padding-left: 60px; padding-right: 60px">
                 <!-- <br>&#9989; result
                 <br>&#10062; result -->
-                <br>&#128309; 1.	Current customers consistent of 12.1% of Golden, 8.7% of Silver, 55.3% of Bronze, 16.1% of Normal membership card. 
+                <br>&#128309; 1.	Current customers consists of 12.1% of Golden, 8.7% of Silver, 55.3% of Bronze, 16.1% of Normal membership card. 
                 Membership card tiers are strongly linked with customer demographics. With deep learning model, we can predict membership card 
                 with accuracy of 0.970. With random forest model, prediction accuracy can be up to 0.982.
                 <br>
