--- a/templates/index.html
+++ b/templates/index.html
@@ -154,7 +154,7 @@
             </div>
             <div class="col-md-5">
                 <li class="nav-item">
-                <h4><a class="nav-link" href="tableau_store">Tableau</a></h4>
+                <h4><a class="nav-link" href="tableau_customer">Tableau</a></h4>
                 </li> 
             </div>
             <div class="col-md-4">
