--- a/templates/machine_learning.html
+++ b/templates/machine_learning.html
@@ -76,6 +76,17 @@
         </div>
     </div>
 
+    <div>
+        <div class="col-md-12">
+        <!-- <h2>Bubble chart of Machinge Learning Models</h2> -->
+        <div class="container-fluid">
+        <a href="https://public.tableau.com/app/profile/gian.marcelin/viz/MLModelAccuracy/AccuracyofMLModelsDB?publish=yes" target="_blank" rel="noopener noreferrer">
+            <img src="static/images/ml_models.png" alt="ml_models" class="center">
+        </a>
+        </div>
+        </div>
+    </div>
+    
     </div>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
