--- a/templates/index.html
+++ b/templates/index.html
@@ -61,19 +61,17 @@
             <p style="color: rgb(50, 50, 59); font-size:25px ; padding-left: 30px; padding-right: 60px">
                 <!-- <br>&#9989; result
                 <br>&#10062; result -->
-                <br>&#10067; 1.	How many stores there are?
+                <br>&#10067; 1.	How many stores there are? In which cities and states these stores are?
                 <br>
-                <br>&#10067; 2.	In which cities and states these stores are?
+                <br>&#10067; 2.	Do costumer demographics link to membership card tiers?
                 <br>
-                <br>&#10067; 3.	Do costumer demographics link to membership card tiers?
+                <br>&#10067; 3.	Is the cost of sales promotions linked to customers demographics?
                 <br>
-                <br>&#10067; 4.	Is the cost of sales promotions linked to customers demographics?
+                <br>&#10067; 4.	What is media cost, by state, by store type, by food department?
                 <br>
-                <br>&#10067; 5.	What is media cost, by state, by store type, by food department?
+                <br>&#10067; 5.	Which are top media promotions, the top unit of sales?
                 <br>
-                <br>&#10067; 6.	Which are top media promotions, the top unit of sales?
-                <br>
-                <br>&#10067; 7.	What are the sales, by department, store, food category?
+                <br>&#10067; 6.	What are the sales, by department, store, food category?
             </p>
         </div>
         </div>   
@@ -224,23 +222,24 @@
             <p style="color: rgb(50, 50, 59); font-size:25px ; padding-left: 60px; padding-right: 60px">
                 <!-- <br>&#9989; result
                 <br>&#10062; result -->
-                <br>&#128309; 1.	Current customers consists of 12.1% of Golden, 8.7% of Silver, 55.3% of Bronze, 16.1% of Normal membership card. 
-                Membership card tiers are strongly linked with customer demographics. With deep learning model, we can predict membership card 
-                with accuracy of 0.970. With random forest model, prediction accuracy can be up to 0.982.
+                <br>&#128309; 1.	Membership card tiers are strongly linked with customer demographics. 
+                With deep learning model, we can predict membership card with accuracy of 0.970. 
+                With random forest model, prediction accuracy can be up to 0.982. 
+                Advertising of Card Membership Tiers should be targeted via segmentation.
                 <br>
-                <br>&#128309; 2.	Regardless of gender, average income, and member status, supermarket shows most of customers. 
-                This explains why supermarket spend more money on advertisements (highest media cost by store type). 
-                Since weekend markdown is the most effective way to stimulate customers to shop. 
-                Foodmart supermarket make their most investment on weekend markdown promotion. 
-                Somehow, Media cost can be predicted by customer demographics with random forest regressor (RMSE: 0.637). 
-                Stores also make different efforts on different food department.
+                <br>&#128309; 2.	Media cost can also be predicted by customer demographics with random forest regressor (RMSE: 0.637).  
+                Owners & Investors should play close attention the makeup of their customers when projecting Sales Promotion budgets.
                 <br>
-                <br>&#128309; 3.	There aren’t obvious differences between cities on store sales (expect San Francisco and Bellingham). 
-                But in the view of media type, store sales are taken big advantages from daily paper. 
-                Customer demographics are failed to predict store sales or media cost with multiple linear regression. 
-                This might because store sales and media choice are not target on based on specifical customers. 
-                Customer dataset is refused to KMeans clustering. The possible reason is customer demographics have 
-                low correlations between each other from the result of feature correlation heatmap discovery.
+                <br>&#128309; 3.	For “Media Type,” daily paper advertisements are strongly correlated to store sales, 
+                thus newspaper promotions are highly recommended.
+                <br>
+                <br>&#128309; 4.	Supermarkets have the most of customers & spend more money on advertisements (highest media cost by store type).
+                 Weekend markdown is the most effective way to stimulate customers to shop for Supermarkets & 
+                 Supermarket also invests the most money in their Weekend Markdown promotions.
+                <br>
+                <br>&#128309; 5.	 Store characteristics (square feet, store cost, coffee bar, video store, etc.) were strong predictors of store sales. 
+                Investor should expect to invest in a grocery store’s physical features, 
+                amenities if they want to maximize store sales.
             </p>
         </div>
         </div> 
