--- a/templates/index.html
+++ b/templates/index.html
@@ -54,14 +54,14 @@
         </div>
     </div> 
     <br>
-    <div class="outer">
+    <!-- <div class="outer">
         <div class="inner"> 
         <div class="col-md-12"> 
             <h1 class="display-4" style="color: green; font-size:35px; padding-left: 30px; padding-right: 60px">Questions to answer:</h1>
             <p style="color: rgb(50, 50, 59); font-size:25px ; padding-left: 30px; padding-right: 60px">
                 <!-- <br>&#9989; result
                 <br>&#10062; result -->
-                <br>&#10067; 1.	How many stores there are? In which cities and states these stores are?
+                <!-- <br>&#10067; 1.	How many stores there are? In which cities and states these stores are?
                 <br>&#10067; 2.	Do costumer demographics link to membership card tiers?
                 <br>&#10067; 3.	Is the cost of sales promotions linked to customers demographics?
                 <br>&#10067; 4.	What is media cost, by state, by store type, by food department?
@@ -70,7 +70,7 @@
                 <br><br><br><br><br><br>
             </p>
         </div>
-        </div>   
+        </div>    --> -->
     <hr>
     </div>
     <div class="container-fluid">
