--- a/templates/index.html
+++ b/templates/index.html
@@ -54,28 +54,22 @@
         </div>
     </div> 
     <br>
-    <div class="outer">
-        <div class="inner"> 
-        <div class="col-md-12"> 
-            <h1 class="display-4" style="color: green; font-size:35px; padding-left: 30px; padding-right: 60px">Guiding questions:</h1>
-            <p style="color: rgb(50, 50, 59); font-size:25px ; padding-left: 30px; padding-right: 60px">
-                How many stores there are? 
-                In which cities and states these stores are? 
-                Do costumer demographics link to membership card tiers?
-                Is the cost of sales promotions linked to customers demographics?
-                What is media cost, by state, by store type, by food department?
-                Which are top media promotions, the top unit of sales?
-                What are the sales, by department, store, food category?
-                <!-- <br>&#10067; 1.	How many stores there are? In which cities and states these stores are?
-                <br>&#10067; 2.	Do costumer demographics link to membership card tiers?
-                <br>&#10067; 3.	Is the cost of sales promotions linked to customers demographics?
-                <br>&#10067; 4.	What is media cost, by state, by store type, by food department?
-                <br>&#10067; 5.	Which are top media promotions, the top unit of sales?
-                <br>&#10067; 6.	What are the sales, by department, store, food category? -->
-                <br><br><br>
-            </p>
-        </div>
-        </div>   
+    <br>
+    <div class="container"></div>
+    <div class="row">
+    <div class="col-md-12">  
+        <h1 class="display-4" style="color: green; font-size:35px; padding-left: 30px; padding-right: 60px">Guiding questions:</h1>
+        <p style="color: rgb(50, 50, 59); font-size:25px ; padding-left: 30px; padding-right: 60px">
+            How many stores there are? 
+            In which cities and states these stores are? 
+            Do costumer demographics link to membership card tiers?
+            Is the cost of sales promotions linked to customers demographics?
+            What is media cost, by state, by store type, by food department?
+            Which are top media promotions, the top unit of sales?
+            What are the sales, by department, store, food category?
+        </p>
+    </div>
+    </div>  
     <hr>
     </div>
     <div class="container-fluid">
