--- a/templates/index.html
+++ b/templates/index.html
@@ -54,11 +54,10 @@
         </div>
     </div> 
     <br>
-    <br>
     <div class="container"></div>
     <div class="row">
     <div class="col-md-12">  
-        <h1 class="display-4" style="color: green; font-size:35px; padding-left: 30px; padding-right: 60px">Guiding questions:</h1>
+        <h1 class="display-4" style="color: green; font-size:35px; padding-left: 30px; padding-right: 60px">Guiding Questions:</h1>
         <p style="color: rgb(50, 50, 59); font-size:25px ; padding-left: 30px; padding-right: 60px">
             How many stores there are? 
             In which cities and states these stores are? 
@@ -70,6 +69,7 @@
         </p>
     </div>
     </div>  
+    <br>
     <hr>
     </div>
     <div class="container-fluid">
