update ML bubble chart

--- a/templates/index.html
+++ b/templates/index.html
@@ -220,7 +220,7 @@
                 <br>&#128309; 1.	Membership card tiers are strongly linked with customer demographics. 
                 With deep learning model, we can predict membership card with accuracy of 0.970. 
                 With random forest model, prediction accuracy can be up to 0.982. 
-                Advertising of Card Membership Tiers should be targeted via segmentation.
+                Advertising on Card Membership Tiers should be targeted via segmentation.
                 <br>
                 <br>&#128309; 2.	Media cost can also be predicted by customer demographics with random forest regressor (RMSE: 0.637).  
                 Owners & Investors should play close attention the makeup of their customers when projecting Sales Promotion budgets.
