--- a/templates/machine_learning.html
+++ b/templates/machine_learning.html
@@ -82,6 +82,24 @@
         </div>
     </div>
 
+    <div>
+        <div class="col-md-12">
+        <!-- <h2>Bubble chart of Machinge Learning Models</h2> -->
+        <div class="container-fluid">
+            <div class="row">       
+                <div class="col-md-3">
+                    <h2></h2>
+                </div>
+                <div class="col-md-9">
+                    <a href="https://public.tableau.com/app/profile/gian.marcelin/viz/MLModelAccuracy/AccuracyofMLModelsDB?publish=yes" target="_blank" rel="noopener noreferrer">
+                        <img src="static/images/Accuracy of ML Model.png" alt="Accuracy of ML Models" class="center">
+                    </a>
+                </div>
+            </div>
+        </div>
+        </div>
+    </div>
+    
     <br><hr>
     <div>
         <div class="col-md-12">
