--- a/templates/index.html
+++ b/templates/index.html
@@ -217,24 +217,23 @@
             <p style="color: rgb(50, 50, 59); font-size:25px ; padding-left: 60px; padding-right: 60px">
                 <!-- <br>&#9989; result
                 <br>&#10062; result -->
-                <br>&#128309; 1.	Membership card tiers are strongly linked with customer demographics. 
-                With deep learning model, we can predict membership card with accuracy of 0.970. 
+                <br>&#128309; 1.	Membership Card tiers are strongly linked with customer demographics. 
+                With deep learning model, we can predict Membership Card with accuracy of 0.970. 
                 With random forest model, prediction accuracy can be up to 0.982. 
-                Advertising on Card Membership Tiers should be targeted via segmentation.
+                Advertising on Membership Card tiers should be targeted via segmentation.
                 <br>
-                <br>&#128309; 2.	Media cost can also be predicted by customer demographics with random forest regressor (RMSE: 0.637).  
-                Owners & Investors should play close attention the makeup of their customers when projecting Sales Promotion budgets.
+                <br>&#128309; 2.	Media Cost can also be predicted by customer demographics with random forest regressor (RMSE: 0.637).  
+                Owners & Investors should pay close attention the makeup of their customers when projecting Sales Promotion budgets.
                 <br>
-                <br>&#128309; 3.	For “Media Type,” daily paper advertisements are strongly correlated to store sales, 
+                <br>&#128309; 3.	For media type, Daily Paper advertisements are strongly correlated to store sales, 
                 thus newspaper promotions are highly recommended.
                 <br>
-                <br>&#128309; 4.	Supermarkets have the most of customers & spend more money on advertisements (highest media cost by store type).
-                 Weekend markdown is the most effective way to stimulate customers to shop for Supermarkets & 
+                <br>&#128309; 4.	Supermarkets have the most of customers & spend more money on advertisements (highest Media Cost by store type).
+                 Weekend Markdown is the most effective way to stimulate customers to shop in Supermarkets & 
                  Supermarket also invests the most money in their Weekend Markdown promotions.
                 <br>
-                <br>&#128309; 5.	 Store characteristics (square feet, store cost, coffee bar, video store, etc.) were strong predictors of store sales. 
-                Investor should expect to invest in a grocery store’s physical features, 
-                amenities if they want to maximize store sales.
+                <br>&#128309; 5.	 Store characteristics (Square Feet, Store Cost, Coffee Bar, Video Store, etc.) are strong predictors of Store Sales. 
+                Investor should expect to invest in a grocery store’s physical features, amenities if they want to maximize store sales.
             </p>
         </div>
         </div> 
