--- a/templates/index.html
+++ b/templates/index.html
@@ -223,7 +223,7 @@
                 Advertising on Membership Card tiers should be targeted via segmentation.
                 <br>
                 <br>&#128309; 2.	Media Cost can also be predicted by customer demographics with random forest regressor (RMSE: 0.637).  
-                Owners & Investors should pay close attention the makeup of their customers when projecting Sales Promotion budgets.
+                Owners & Investors should pay close attention to the makeup of their customers when projecting Sales Promotion budgets.
                 <br>
                 <br>&#128309; 3.	For media type, Daily Paper advertisements are strongly correlated to store sales, 
                 thus newspaper promotions are highly recommended.
